syntax = "proto3";

package sensor;

// The Sensor service definition.
service SensorService {
  rpc CreateSensor(CreateSensorRequest) returns (CreateSensorResponse);
  rpc GetSensor(GetSensorRequest) returns (GetSensorResponse);
  rpc UpdateSensor(UpdateSensorRequest) returns (UpdateSensorResponse);
  rpc DeleteSensor(DeleteSensorRequest) returns (DeleteSensorResponse);
}

message CreateSensorRequest {
  Sensor sensor = 1;
}

message CreateSensorResponse {
  Sensor sensor = 1;
}

message GetSensorRequest {
  int32 id = 1;
}

message GetSensorResponse {
  Sensor sensor = 1;
}

message UpdateSensorRequest {
  Sensor sensor = 1;
}

message UpdateSensorResponse {
  Sensor sensor = 1;
}

message DeleteSensorRequest {
  int32 id = 1;
}

message DeleteSensorResponse {
  bool success = 1;
}

// The Sensor message represents a sensor in the system.
message Sensor {
  int32 id = 1;
  int32 temperature = 2;
  int32 humidity = 3;
  int32 distance = 4;
  int32 light = 5;
  int32 sound = 6;
}
